@@ -88,6 +88,7 @@ struct c3x_config {
 	char allow_military_leaders_to_hurry_wonders;
 	char halve_ai_research_rate;
 	char aggressively_penalize_bankruptcy;
+	char no_penalty_exception_for_agri_fresh_water_city_tiles;
 
 	char use_offensive_artillery_ai;
 	int ai_build_artillery_ratio;
