@@ -184,3 +184,7 @@ halve_ai_research_rate = false
 ;   3. Switching cities to building Wealth
 ; This rule might cause balance problems on Sid difficulty where the AI often bankrupts itself.
 aggressively_penalize_bankruptcy = false
+
+; Under the standard game rules, the Despotism tile penalty does not apply to food yield from city tiles of Agricultural civs with fresh water. Set
+; this option to true to remove that exception to the penalty.
+no_penalty_exception_for_agri_fresh_water_city_tiles = false
