@@ -8,6 +8,7 @@
 - Widen C3X error, info, and warning popups
 - Warn if two-city start contains adjacent cities or missing FP cities
 - Gold amount autofill activates when editing an amount on the table
+- Option to remove exception to tile penalty for city tiles with fresh water and Agri trait
 
 * RELEASE 13
 - AI two-city start
